# acv-lift-stability-cpp

./: .gitignore  CMakeLists.txt  README.md
data/: vehicle_A.json  vehicle_B.json  vehicle_C.json  vehicle_C2.json  vehicle_C3.json
include/my_project/: analytical.h  constants.h  numerical.h  utils.h  vehicle_data.h
src/: analytical.cpp  main.cpp  numerical.cpp  utils.cpp  vehicle_data.cpp
test_data/: vehicle_a.json
tests/: test_analytical.cpp  test_integration.cpp  test_numerical.cpp  test_vehicle_data.cpp
